# 2025-05-07_anaconda-python-workshop

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  run.yml
configs/: config.json
data/: README.md  README_2.md
data/external-funds/: Applebead.28-02-2023 breakdown.csv  Applebead.30-04-2023 breakdown.csv  Applebead.30-06-2023 breakdown.csv  Applebead.30-09-2022 breakdown.csv  Applebead.30-11-2022 breakdown.csv  Applebead.31-01-2023 breakdown.csv  Applebead.31-03-2023 breakdown.csv  Applebead.31-05-2023 breakdown.csv  Applebead.31-07-2023 breakdown.csv  Applebead.31-08-2022 breakdown.csv  Applebead.31-08-2023 breakdown.csv  Applebead.31-10-2022 breakdown.csv  Applebead.31-12-2022 breakdown.csv  Belaware.28_02_2023.csv  Belaware.30_04_2023.csv  Belaware.30_06_2023.csv  Belaware.30_09_2022.csv  Belaware.30_11_2022.csv  Belaware.31_01_2023.csv  Belaware.31_03_2023.csv  Belaware.31_05_2023.csv  Belaware.31_07_2023.csv  Belaware.31_08_2022.csv  Belaware.31_08_2023.csv  Belaware.31_10_2022.csv  Belaware.31_12_2022.csv  Fund Whitestone.28-02-2023 - details.csv  Fund Whitestone.30-04-2023 - details.csv  Fund Whitestone.30-06-2023 - details.csv  Fund Whitestone.30-09-2022 - details.csv  Fund Whitestone.30-11-2022 - details.csv  Fund Whitestone.31-01-2023 - details.csv  (+98 more)
src/: config.py  db.py  loader.py  main.py  recon.py
test/: __init__.py  test_csv_report_loader_e2e.py  test_e2e_csv_fund_report_loader.py  test_e2e_recon_report.py  test_e2e_top_fund_report.py  test_fund_report_loader.py  test_report_loader.py
(+7 files in other folders)
